# hyprwhspr

./: .gitignore  AGENTS.md  CLAUDE.md  Parakeet-Integration-Plan.md  README.md  bump-version.sh  pyproject.toml  requirements-cohere-transcribe.txt  requirements-faster-whisper-cuda.txt  requirements-onnx-asr-gpu.txt  requirements-onnx-asr.txt  requirements-optional.txt  requirements-pywhispercpp.txt  requirements-realtime-elevenlabs.txt  requirements-realtime.txt  requirements-rest.txt  requirements-visualizer.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml
docs/: CONFIGURATION.md  MIC_OSD_STYLES.md
lib/: cli.py  main.py
scripts/: build-whisper-nvidia.sh  install-deps.sh  install-omarchy.sh  install-services.sh  install.sh  reset-hyprwhspr.sh  test-parakeet.py  test-services.sh  update.sh  validate-package-payload.py
share/: config.schema.json
tests/: __init__.py  test_audio_device_refresh.py  test_audio_resampler.py  test_backend_proxies.py  test_cli_command_routes.py  test_config_manager_persistence.py  test_config_schema_sync.py  test_credential_manager.py  test_dependency_plans.py  test_device_monitor.py  test_elevenlabs_pill_preview.py  test_keepalive_device_sharing.py  test_keyboard_configure.py  test_keyboard_resync.py  test_keyboard_selection_input.py  test_longform_reliability.py  test_main_startup_safety.py  test_maintenance_repair.py  test_manager_init_lifecycle.py  test_mic_osd_level_feed.py  test_mic_osd_main_fallback.py  test_mic_osd_runner.py  test_mic_osd_style.py  test_monitor_lifecycle.py  test_noctalia_integration.py  (+24 more)
(+119 files in other folders)
