[project]
name = "hyprwhspr"
version = "0.1.0"
description = "Native speech-to-text application for Hyprland with GPU acceleration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "evdev>=1.6.0",
    "pyperclip>=1.8.2",
    "pywhispercpp==1.3.3",
    "requests>=2.25.0",
    "psutil>=5.8.0",
    "rich>=13.0.0",
    "onnxruntime>=1.15.0",
    "onnx-asr>=0.7.0",
]
